add more details

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@ body::before {
 
 /* This box class is purely used for explaining how the bootstrap grid system works. */
 .box {
-  background-color: lightblue;
-  border: 1px solid blue;
-  min-height: 50px;
+  background-color: bisque;
+  border: 1px solid coral;
+  height: 50px;
   font-size: 2rem;
 }
 
